tests/NormalTests/paczka1/fuzzy1/99223766.err
Error in line 16: A824 S731 -2,9
Error in line 8: 2Hl S731 57,2
Error in line 20: 7Eqb Au24 uu,u
Error in line 17: 7Eqb A824 67,4
Error in line 13: A824 S731 22,0
Error in line 28: A824 A824 8,1
Error in line 30: A824 S206 32,1
Error in line 18: 2Hl A824 12,8
Error in line 35: A824 S206 23,8
Error in line 15: TSTShIXKCN A824 29,5
